--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "generateApi": "npx swagger-typescript-api -p ./kabelkrant/src/extensions/documentation/documentation/1.0.0/full_documentation.json -o ./src/api -n strapiApi.ts --extract-request-body true -r true"
   },
   "main": "background.js",
   "dependencies": {
+    "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
