--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@types/html-to-text": "^9.0.0",
+    "autoprefixer": "^10.4.13",
     "axios": "^1.2.3",
     "html-to-text": "^9.0.3",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
