--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,8 @@
     "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -16,28 +16,32 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@types/html-to-text": "^9.0.0",
+    "@types/lodash": "^4.14.191",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.3",
     "html-to-text": "^9.0.3",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "wordpress-api-client": "0.4.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addon-interactions": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/builder-vite": "^0.2.7",
-    "@storybook/jest": "^0.0.10",
-    "@storybook/react": "^6.5.15",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-actions": "^7.0.9",
+    "@storybook/addon-essentials": "^7.0.9",
+    "@storybook/addon-interactions": "^7.0.9",
+    "@storybook/addon-links": "^7.0.9",
+    "@storybook/jest": "^0.1.0",
+    "@storybook/react": "^7.0.9",
+    "@storybook/react-vite": "^7.0.9",
+    "@storybook/testing-library": "^0.1.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "babel-loader": "^8.3.0",
     "sass": "^1.57.1",
+    "storybook": "^7.0.9",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
