--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/lodash": "^4.14.191",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.3",
+    "buffer": "^6.0.3",
     "html-to-text": "^9.0.3",
     "lodash": "^4.17.21",
     "postcss": "^8.4.21",
