--- a/obs-server/package.json
+++ b/obs-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "tsc -w",
-    "start": "node dist/index.js",
+    "start": "nodemon dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/node": "^20.1.4",
+    "nodemon": "^2.0.22",
     "obs-websocket-js": "^5.0.2"
   }
 }
