--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,13 @@
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.3",
     "buffer": "^6.0.3",
+    "date-fns": "^2.30.0",
     "html-to-text": "^9.0.3",
     "lodash": "^4.17.21",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "wordpress-api-client": "0.4.8"
   },
   "devDependencies": {
