--- a/obs-server/package.json
+++ b/obs-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "tsc -w",
-    "start": "nodemon dist/index.js",
+    "start": "cd dist && nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
@@ -15,7 +15,12 @@
     "typescript": "^5.0.3"
   },
   "dependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^20.1.4",
+    "@types/node-cron": "^3.0.8",
+    "date-fns": "^2.30.0",
+    "express": "^4.18.2",
+    "node-cron": "^3.0.2",
     "nodemon": "^2.0.22",
     "obs-websocket-js": "^5.0.2"
   }
