--- a/obs-server/electron/my-new-app/package.json
+++ b/obs-server/electron/my-new-app/package.json
@@ -5,7 +5,8 @@
   "description": "My Electron application description",
   "main": ".vite/build/main.js",
   "scripts": {
-    "start": "electron-forge start",
+    "start": "electron-forge start -- --trace-warnings",
+    "debug": "npm run start -- --inspect-brk-electron",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -56,6 +57,7 @@
     "zod": "^3.22.4"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@types/express": "^4.17.17",
     "@types/node": "^20.8.6",
@@ -67,6 +69,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
+    "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "electron-squirrel-startup": "^1.0.0",
     "eslint": "^8.45.0",
