--- a/obs-server/electron/kabelkrant-manager/package.json
+++ b/obs-server/electron/kabelkrant-manager/package.json
@@ -57,6 +57,7 @@
     "zod": "^3.22.4"
   },
   "dependencies": {
+    "@electron-forge/publisher-github": "^7.2.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@types/express": "^4.17.17",
@@ -85,6 +86,7 @@
     "storybook": "^7.3.2",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
+    "update-electron-app": "^3.0.0",
     "utf-8-validate": "^5.0.10",
     "uuid": "^9.0.1",
     "vite": "^4.4.5"
