--- a/obs-server/electron/kabelkrant-manager/package.json
+++ b/obs-server/electron/kabelkrant-manager/package.json
@@ -12,6 +12,7 @@
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx ."
   },
+  "repository": "ThijsOnGitHub/kabelkrant",
   "keywords": [],
   "author": {
     "name": "ThijsOnGitHub",
