Fix app folder in build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
       - main
       - staging
 env:
-  APP_FOLDER: obs-server/electron/kabelkrant-manager
+  APP_FOLDER: kabelkrant-manager
 
 jobs: 
   deploy-application:
