--- a/kabelkrant-manager/package.json
+++ b/kabelkrant-manager/package.json
@@ -61,6 +61,7 @@
     "@electron-forge/publisher-github": "^7.2.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@sentry/electron": "^4.20.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.8.6",
     "@types/node-cron": "^3.0.8",
