--- a/kabelkrant-manager/package.json
+++ b/kabelkrant-manager/package.json
@@ -20,6 +20,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@sentry/wizard": "^3.20.5",
     "@electron-forge/cli": "^7.2.0",
     "@electron-forge/maker-deb": "^7.2.0",
     "@electron-forge/maker-rpm": "^7.2.0",
@@ -62,6 +63,8 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@sentry/electron": "^4.20.0",
+    "@sentry/react": "^7.105.0",
+    "@sentry/vite-plugin": "^2.14.2",
     "@types/express": "^4.17.17",
     "@types/node": "^20.8.6",
     "@types/node-cron": "^3.0.8",
