--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,7 @@ name: App deploy
 on:
   push:
     branches: 
-      - main
-      - staging
+      - master
 env:
   APP_FOLDER: kabelkrant-manager
 
