--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "dev:staging": "vite --host --mode staging",
-    "dev:production": "vite --host --mode live",
+    "dev:production": "vite --host --mode live --port 3000",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
