--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.2.3",
     "buffer": "^6.0.3",
     "date-fns": "^2.30.0",
+    "framer-motion": "^11.1.7",
     "html-to-text": "^9.0.3",
     "lodash": "^4.17.21",
     "postcss": "^8.4.21",
