--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,6 @@
     "date-fns": "^2.30.0",
     "html-to-text": "^9.0.3",
     "lodash": "^4.17.21",
-    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
@@ -40,9 +39,12 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "autoprefixer": "^10.4.19",
     "babel-loader": "^8.3.0",
+    "postcss": "^8.4.39",
     "sass": "^1.57.1",
     "storybook": "^7.0.9",
+    "tailwindcss": "^3.4.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
