--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,10 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.50.1",
+    "@tanstack/react-query-devtools": "^5.50.1",
     "@types/html-to-text": "^9.0.0",
     "@types/lodash": "^4.14.191",
-    "autoprefixer": "^10.4.13",
     "axios": "^1.2.3",
     "buffer": "^6.0.3",
     "date-fns": "^2.30.0",
