[feature] Add support for multiple omroepen

--- a/plugin-wordpress/docker-compose.yaml
+++ b/plugin-wordpress/docker-compose.yaml
@@ -41,6 +41,7 @@ services:
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: wordpress
       WORDPRESS_DEBUG: 1
+      DEBUG_SITE: "kabelkrant"
     networks:
       - wpsite
 networks:
