--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "check": "tsc --noEmit",
+    "check": "tsc --noEmit -w",
     "dev:middenholland": "vite --host --mode middenholland",
     "dev:staging": "vite --host --mode staging",
     "dev:production": "vite --host --mode live --port 3000",
