--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@sentry/react": "^8.34.0",
+    "@sentry/vite-plugin": "^2.22.5",
     "@tanstack/react-query": "^5.50.1",
     "@tanstack/react-query-devtools": "^5.50.1",
     "@types/html-to-text": "^9.0.0",
